--- a/src/main/resources/GuiV1.fxml
+++ b/src/main/resources/GuiV1.fxml
@@ -35,51 +35,29 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <VBox prefHeight="400.0" prefWidth="493.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.GameController">
   <children>
-    <MenuBar VBox.vgrow="NEVER">
-      <menus>
-        <Menu mnemonicParsing="false" text="File">
-          <items>
-            <MenuItem mnemonicParsing="false" text="New" />
-            <MenuItem mnemonicParsing="false" text="Open…" />
-            <Menu mnemonicParsing="false" text="Open Recent" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Close" />
-            <MenuItem mnemonicParsing="false" text="Save" />
-            <MenuItem mnemonicParsing="false" text="Save As…" />
-            <MenuItem mnemonicParsing="false" text="Revert" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Preferences…" />
-            <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Quit" />
-          </items>
-        </Menu>
-        <Menu mnemonicParsing="false" text="Help">
-          <items>
-            <MenuItem mnemonicParsing="false" text="About MyHelloApp" />
-          </items>
-        </Menu>
-      </menus>
-    </MenuBar>
+      <HBox prefHeight="23.0" prefWidth="493.0">
+         <children>
+            <ToggleButton mnemonicParsing="false" onAction="#musicMute" text="Mute" />
+         </children>
+      </HBox>
       <HBox prefHeight="424.0" prefWidth="493.0">
          <children>
             <VBox fx:id="producer_pane" prefHeight="375.0" prefWidth="411.0">
@@ -306,10 +284,14 @@
                     <tabs>
                       <Tab fx:id="visuals_tab" text="Visuals">
                         <content>
-                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                          <AnchorPane fx:id="visual_pane" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
-                                    <ImageView fitHeight="259.0" fitWidth="248.0" pickOnBounds="true" preserveRatio="true" />
-                                    <ToggleButton layoutX="199.0" layoutY="235.0" mnemonicParsing="false" text="Mute" onAction="#muteButton"  />
+                                    <ImageView fx:id="visual" fitHeight="259.0" fitWidth="248.0" pickOnBounds="true" preserveRatio="true" />
+                                    <Pane fx:id="part_pane" layoutX="62.0" layoutY="51.0" prefHeight="195.0" prefWidth="123.0" />
+                                    <ImageView fx:id="visual_mask" fitHeight="259.0" fitWidth="248.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@BodyMask.png" />
+                                       </image></ImageView>
                                  </children></AnchorPane>
                         </content>
                       </Tab>
